# SimpleSignal

./: CMakeLists.txt
cmake/: Config.cmake.in
